--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "MKRingProgressView"]
 	path = MKRingProgressView
 	url = https://github.com/LoopKit/MKRingProgressView.git
+[submodule "spike-client-swift-195"]
+	path = spike-client-swift-195
+	url = https://github.com/dthornley/spike-client-swift-195
