--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,8 @@
 [submodule "LoopKit"]
 	path = LoopKit
 	url = https://github.com/LoopKit/LoopKit.git
+	url = https://github.com/dm61/LoopKit.git
+	branch = nonlinear-carb-model
 [submodule "CGMBLEKit"]
 	path = CGMBLEKit
 	url = https://github.com/LoopKit/CGMBLEKit.git
