--- a/LoopConfigOverride.xcconfig
+++ b/LoopConfigOverride.xcconfig
@@ -6,7 +6,7 @@
 // Customize this to change the app name displayed
 MAIN_APP_DISPLAY_NAME = Loop
 
-LOOP_MARKETING_VERSION = 1.10.1-nlcm-spike-ws
+LOOP_MARKETING_VERSION = 1.10.1-nlcm-spike-microbolus-dt
 // Features
 // SWIFT_ACTIVE_COMPILATION_CONDITIONS = $(inherited) FEATURE_OVERRIDES_DISABLED
 
