--- a/LoopConfigOverride.xcconfig
+++ b/LoopConfigOverride.xcconfig
@@ -6,7 +6,7 @@
 // Customize this to change the app name displayed
 MAIN_APP_DISPLAY_NAME = Loop
 
-LOOP_MARKETING_VERSION = 2.1.0-s-dca-ab-dce-dt
+LOOP_MARKETING_VERSION = 2.1.0-s-dca-ab-dt
 // Features
 
 FEATURE_SPECIFIER = Automatic Bolusing
