--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,12 @@
 	path = spike-client-swift-195
 	url = https://github.com/dthornley/spike-client-swift-195
 	branch = dev-workspace
+[submodule "miaomiao-client-swift"]
+	path = miaomiao-client-swift
+	url = https://github.com/dthornley/miaomiao-client-swift.git
+[submodule "bubble-client-swift"]
+	path = bubble-client-swift
+	url = https://github.com/bubbledevteam/bubble-client-swift
+[submodule "NightscoutAPIClient"]
+	path = NightscoutAPIClient
+	url = https://github.com/ivalkou/NightscoutAPIClient.git
