--- a/Loop.xcworkspace/xcshareddata/xcschemes/Loop (Workspace).xcscheme
+++ b/Loop.xcworkspace/xcshareddata/xcschemes/Loop (Workspace).xcscheme
@@ -3,8 +3,8 @@
    LastUpgradeVersion = "1100"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "NO"
-      buildImplicitDependencies = "NO">
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -244,7 +244,7 @@
                ReferencedContainer = "container:G4ShareSpy/G4ShareSpy.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
-<BuildActionEntry
+         <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
             buildForProfiling = "YES"
@@ -295,34 +295,6 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "432B0E871CDFC3C50045347B"
-               BuildableName = "BubbleClient.framework"
-               BlueprintName = "BubbleClient"
-               ReferencedContainer = "container:bubble-client-swift/BubbleClient.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "43A8EC81210E664300A81379"
-               BuildableName = "BubbleClientUI.framework"
-               BlueprintName = "BubbleClientUI"
-               ReferencedContainer = "container:bubble-client-swift/BubbleClient.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "432B0E871CDFC3C50045347B"
                BuildableName = "xDripClient.framework"
                BlueprintName = "xDripClient"
                ReferencedContainer = "container:xdrip-client-swift/xDripClient.xcodeproj">
@@ -340,62 +312,6 @@
                BuildableName = "xDripClientUI.framework"
                BlueprintName = "xDripClientUI"
                ReferencedContainer = "container:xdrip-client-swift/xDripClient.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "432B0E871CDFC3C50045347B"
-               BuildableName = "SpikeClient.framework"
-               BlueprintName = "SpikeClient"
-               ReferencedContainer = "container:spike-client-swift-195/SpikeClient.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "43A8EC81210E664300A81379"
-               BuildableName = "SpikeClientUI.framework"
-               BlueprintName = "SpikeClientUI"
-               ReferencedContainer = "container:spike-client-swift-195/SpikeClient.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "432B0E871CDFC3C50045347B"
-               BuildableName = "BubbleClient.framework"
-               BlueprintName = "BubbleClient"
-               ReferencedContainer = "container:bubble-client-swift/BubbleClient.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "43A8EC81210E664300A81379"
-               BuildableName = "BubbleClientUI.framework"
-               BlueprintName = "BubbleClientUI"
-               ReferencedContainer = "container:bubble-client-swift/BubbleClient.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -539,16 +455,6 @@
                BuildableName = "G4ShareSpyTests.xctest"
                BlueprintName = "G4ShareSpyTests"
                ReferencedContainer = "container:G4ShareSpy/G4ShareSpy.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "432B0E911CDFC3C50045347B"
-               BuildableName = "SpikeClientTests.xctest"
-               BlueprintName = "SpikeClientTests"
-               ReferencedContainer = "container:SpikeClient.xcodeproj">
             </BuildableReference>
          </TestableReference>
          <TestableReference
